@@ -1,0 +1,3 @@
+.*.sw[nop]
+.build/
+String-ToIdentifier-EN-*
