@@ -13,10 +13,6 @@ use Exporter 'import';
 
 String::ToIdentifier::EN - Convert Strings to English Program Identifiers
 
-=cut
-
-our $VERSION = '0.09';
-
 =head1 SYNOPSIS
 
     use utf8;
